[gd_scene load_steps=4 format=3 uid="uid://bkj64jlbcgesg"]

[ext_resource type="Script" uid="uid://b3d4shmixgmnl" path="res://scenes/menus/stageSelection/stageList/stage_list.gd" id="1_3y8ui"]
[ext_resource type="Script" uid="uid://bpq84fvifeq4" path="res://scenes/menus/stageSelection/stageList/template_stage.gd" id="2_atmct"]
[ext_resource type="Texture2D" uid="uid://d1fa7uefvniqx" path="res://assets/menu/sprites/green_check.png" id="3_0iv78"]

[node name="StageList" type="VBoxContainer"]
offset_right = 586.0
offset_bottom = 507.0
size_flags_horizontal = 3
script = ExtResource("1_3y8ui")

[node name="TemplateStage" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
mouse_filter = 0
script = ExtResource("2_atmct")

[node name="StageNumber" type="RichTextLabel" parent="TemplateStage"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
mouse_filter = 1
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StageName" type="RichTextLabel" parent="TemplateStage"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 1
text = "Default Name"
vertical_alignment = 1

[node name="CompletedCheck" type="TextureRect" parent="TemplateStage"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
texture = ExtResource("3_0iv78")
expand_mode = 1
stretch_mode = 4

[node name="StageDifficulty" type="RichTextLabel" parent="TemplateStage"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
mouse_filter = 1
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
